--- a/world/intel-compute-runtime/.artixlinux/pkgbase.yaml
+++ b/world/intel-compute-runtime/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: intel-compute-runtime
-  version: 25.13.33276.16-1
-  arch:
-    - x86_64
-  pkgname:
-    - intel-compute-runtime
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 25.13.33276.16-1
+    version: 25.18.33578.6-1
     packages:
-      - intel-compute-runtime-25.13.33276.16-1-x86_64.pkg.tar.zst
+      - intel-compute-runtime-25.18.33578.6-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
