--- a/world/intel-graphics-compiler/.artixlinux/pkgbase.yaml
+++ b/world/intel-graphics-compiler/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: intel-graphics-compiler
-  version: 1:2.10.8-1
-  arch:
-    - x86_64
-  pkgname:
-    - intel-graphics-compiler
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:2.10.8-1
+    version: 1:2.11.7-1
     packages:
-      - intel-graphics-compiler-1:2.10.8-1-x86_64.pkg.tar.zst
+      - intel-graphics-compiler-1:2.11.7-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
