--- a/world/intel-media-driver/.artixlinux/pkgbase.yaml
+++ b/world/intel-media-driver/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: intel-media-driver
-  version: 25.2.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - intel-media-driver
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 25.2.1-1
+    version: 25.2.3-1
     packages:
-      - intel-media-driver-25.2.1-1-x86_64.pkg.tar.zst
+      - intel-media-driver-25.2.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
