--- a/world/gnome-control-center/.artixlinux/pkgbase.yaml
+++ b/world/gnome-control-center/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: gnome-control-center
-  version: 48.1-2
-  arch:
-    - x86_64
-  pkgname:
-    - gnome-control-center
-    - gnome-keybindings
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 48.1-2
+    version: 48.2-1
     packages:
-      - gnome-control-center-48.1-2-x86_64.pkg.tar.zst
-      - gnome-keybindings-48.1-2-x86_64.pkg.tar.zst
+      - gnome-control-center-48.2-1-x86_64.pkg.tar.zst
+      - gnome-keybindings-48.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
