--- a/world/gnome-maps/.nvchecker.toml
+++ b/world/gnome-maps/.nvchecker.toml
@@ -1,7 +1,6 @@
 [gnome-maps]
 source = "git"
 git = "https://gitlab.gnome.org/GNOME/gnome-maps.git"
-include_regex = 'v\d+(\.\d+)*'
+include_regex = '\d+(\.\d+)*'
 from_pattern = '\.([a-z])'
 to_pattern = '\1'
-prefix = "v"
