--- a/world/gnome-online-accounts/.artixlinux/pkgbase.yaml
+++ b/world/gnome-online-accounts/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: gnome-online-accounts
-  version: 3.54.2-2
-  arch:
-    - x86_64
-  pkgname:
-    - gnome-online-accounts
-    - libgoa
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.54.2-2
+    version: 3.54.3-1
     packages:
-      - gnome-online-accounts-3.54.2-2-x86_64.pkg.tar.zst
-      - libgoa-3.54.2-2-x86_64.pkg.tar.zst
+      - gnome-online-accounts-3.54.3-1-x86_64.pkg.tar.zst
+      - libgoa-3.54.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
