--- a/world/libadwaita/.artixlinux/pkgbase.yaml
+++ b/world/libadwaita/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: libadwaita
-  version: 1:1.7.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - libadwaita
-    - libadwaita-demos
-    - libadwaita-docs
 actions:
   addRepo: world
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:1.7.2-1
+    version: 1:1.7.3-1
     packages:
-      - libadwaita-1:1.7.2-1-x86_64.pkg.tar.zst
-      - libadwaita-demos-1:1.7.2-1-x86_64.pkg.tar.zst
-      - libadwaita-docs-1:1.7.2-1-x86_64.pkg.tar.zst
+      - libadwaita-1:1.7.3-1-x86_64.pkg.tar.zst
+      - libadwaita-demos-1:1.7.3-1-x86_64.pkg.tar.zst
+      - libadwaita-docs-1:1.7.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
