--- a/world/nautilus/.artixlinux/pkgbase.yaml
+++ b/world/nautilus/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: nautilus
-  version: 48.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - nautilus
-    - libnautilus-extension
-    - libnautilus-extension-docs
 actions:
   addRepo: world
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 48.1-1
+    version: 48.2-1
     packages:
-      - nautilus-48.1-1-x86_64.pkg.tar.zst
-      - libnautilus-extension-48.1-1-x86_64.pkg.tar.zst
-      - libnautilus-extension-docs-48.1-1-x86_64.pkg.tar.zst
+      - nautilus-48.2-1-x86_64.pkg.tar.zst
+      - libnautilus-extension-48.2-1-x86_64.pkg.tar.zst
+      - libnautilus-extension-docs-48.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
