--- a/world/mutter/.artixlinux/pkgbase.yaml
+++ b/world/mutter/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: mutter
-  version: 48.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - mutter
-    - mutter-docs
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 48.2-1
+    version: 48.3-1
     packages:
-      - mutter-48.2-1-x86_64.pkg.tar.zst
-      - mutter-docs-48.2-1-x86_64.pkg.tar.zst
+      - mutter-48.3-1-x86_64.pkg.tar.zst
+      - mutter-docs-48.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
