--- a/system/dnssec-anchors/.artixlinux/pkgbase.yaml
+++ b/system/dnssec-anchors/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: dnssec-anchors
-  version: 20190629-4
-  arch:
-    - any
-  pkgname:
-    - dnssec-anchors
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 20190629-4
+    version: 20250524-1
     packages:
-      - dnssec-anchors-20190629-4-any.pkg.tar.zst
+      - dnssec-anchors-20250524-1-any.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
