--- a/system/openldap/PKGBUILD
+++ b/system/openldap/PKGBUILD
@@ -3,23 +3,22 @@
 
 pkgbase=openldap
 pkgname=('openldap' 'libldap')
-pkgver=2.6.9
+pkgver=2.6.10
 pkgrel=1
 arch=('x86_64')
 url="https://www.openldap.org/"
 license=('custom')
 makedepends=('libtool' 'libsasl' 'util-linux' 'chrpath' 'unixodbc' 'libsodium')
-options=('!makeflags' 'emptydirs')
+options=('!makeflags' 'emptydirs' '!lto')
 source=(
   https://www.openldap.org/software/download/OpenLDAP/openldap-release/${pkgbase}-${pkgver}.tgz{,.asc}
   openldap.tmpfiles
   openldap.sysusers)
-sha256sums=('2cb7dc73e9c8340dff0d99357fbaa578abf30cc6619f0521972c555681e6b2ff'
+sha256sums=('c065f04aad42737aebd60b2fe4939704ac844266bc0aeaa1609f0cad987be516'
             'SKIP'
             '0be46138e53ff2fa6d4b4c06bfbdd2100426e0bd2ed29bf3419ade6b5974e9a0'
-            'c6e3fa72138edfebb4ecb17f677e217c885ff9eef805b5c8ad1c09169bb0ff8e')
+            'e4af9009982808d04fd10bd5d9559cec193efc7a05c6807367473da33392edab')
 validpgpkeys=('3CE269B5398BC8B785645E987F67D5FD1CE1CBCE') # OpenLDAP Project <project@openldap.org> https://www.openldap.org/software/download/OpenLDAP/gpg-pubkey.txt
-options=(!lto)
 
 # extra modules found in contrib/slapd-modules
 _extra_modules=(
