--- a/world/libslirp/PKGBUILD
+++ b/world/libslirp/PKGBUILD
@@ -1,10 +1,9 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Morten Linderud <foxboron@archlinux.org>
+# Maintainer: Morten Linderud <foxboron@archlinux.org>
 # Contributor: David Runge <dvzrv@archlinux.org>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 
 pkgname=libslirp
-pkgver=4.9.0
+pkgver=4.9.1
 pkgrel=1
 pkgdesc='General purpose TCP-IP emulator'
 arch=(x86_64)
@@ -14,8 +13,8 @@ depends=(glib2)
 makedepends=(meson)
 provides=('libslirp.so')
 source=("${url}/-/archive/v${pkgver}/libslirp-v${pkgver}.tar.gz")
-sha512sums=('503035b24f657f610398c23656b0783bc15ec08d020e42085fd4f558a642d067dab21dd339d0f243f8f34347c3bc82edf22e6a9fc8164bfdfb9bfd7878af9fae')
-b2sums=('1058727a37f5aa959f2149f60df9b2791c9216393b67d2befd49100341c1bf67d4e2d19dfa63b655cdf0aa0816dde75b8527c3f5df40372aa1f2fd45936200a8')
+sha512sums=('cdb66f6280a9982de3c32269aee352bdf225db918590255abaed9bcd0aee4e996d2d8c2c3f62473f57485603ec29fd35723b0649d3ec3c41cc28b22ce913f63b')
+b2sums=('e13338a4b96402eb8bb416ffba6f3b614ab985c74b80763e247b3e6e4b4c6df299c21b4e216968e81604ec6a4c04e9711c5e6abbd6999c6b1148424a32434a2b')
 
 build() {
   artix-meson "$pkgname-v${pkgver}" build
