--- a/lib32/lib32-libxkbcommon/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-libxkbcommon/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: lib32
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -41,10 +41,10 @@ repos:
     packages: []
     debug: []
   lib32:
-    version: 1.9.2-1
+    version: 1.10.0-1
     packages:
-      - lib32-libxkbcommon-1.9.2-1-x86_64.pkg.tar.zst
-      - lib32-libxkbcommon-x11-1.9.2-1-x86_64.pkg.tar.zst
+      - lib32-libxkbcommon-1.10.0-1-x86_64.pkg.tar.zst
+      - lib32-libxkbcommon-x11-1.10.0-1-x86_64.pkg.tar.zst
     debug: []
   galaxy-goblins:
     version: null
