--- a/lib32/lib32-libxkbcommon/PKGBUILD
+++ b/lib32/lib32-libxkbcommon/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=(
   lib32-libxkbcommon
   lib32-libxkbcommon-x11
 )
-pkgver=1.9.2
+pkgver=1.10.0
 pkgrel=1
 pkgdesc='Keymap handling library for toolkits and window systems (32-bit)'
 url='https://xkbcommon.org/'
@@ -30,7 +30,7 @@ checkdepends=(
   xorg-server-xvfb
 )
 source=("git+https://github.com/xkbcommon/libxkbcommon#tag=xkbcommon-$pkgver")
-b2sums=('ccbd310122d3eafbaca76bb8d37894aa9f2d738fa31e13a06def71c525980b7ddfa591cbb89da3419b3be03202afbe42c9862e6204a002f90a71aff1d921516f')
+b2sums=('f5533437ced68d012f54e7cba2bd42e58c85f98db4018db358876f8fe097c9c0e5b0a77309e6f80ffcf7c03183c4828fdb29cb017d2790e49045c72b09eb90e1')
 
 prepare() {
   cd libxkbcommon
@@ -43,7 +43,7 @@ build() {
     -D enable-tools=false
   )
 
-  arch-meson libxkbcommon build "${meson_options[@]}"
+  artix-meson libxkbcommon build "${meson_options[@]}"
   meson compile -C build
 }
 
