--- a/galaxy/firefox/.artixlinux/pkgbase.yaml
+++ b/galaxy/firefox/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -53,8 +53,8 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 139.0-1
+    version: 139.0.1-1
     packages:
-      - firefox-139.0-1-x86_64.pkg.tar.zst
+      - firefox-139.0.1-1-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
