--- a/world/ruby-mime-types-data/.artixlinux/pkgbase.yaml
+++ b/world/ruby-mime-types-data/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: world
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -30,9 +30,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 3.2025.0514-1
+    version: 3.2025.0527-1
     packages:
-      - ruby-mime-types-data-3.2025.0514-1-any.pkg.tar.zst
+      - ruby-mime-types-data-3.2025.0527-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
