--- a/system/libnghttp3/.artixlinux/pkgbase.yaml
+++ b/system/libnghttp3/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: libnghttp3
-  version: 1.9.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - libnghttp3
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 1.9.0-1
+    version: 1.10.0-1
     packages:
-      - libnghttp3-1.9.0-1-x86_64.pkg.tar.zst
+      - libnghttp3-1.10.0-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
