--- a/world/pipewire/.artixlinux/pkgbase.yaml
+++ b/world/pipewire/.artixlinux/pkgbase.yaml
@@ -1,28 +1,4 @@
 ---
-pkgbase:
-  name: pipewire
-  version: 1:1.4.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - pipewire
-    - libpipewire
-    - alsa-card-profiles
-    - pipewire-docs
-    - pipewire-libcamera
-    - pipewire-audio
-    - pipewire-alsa
-    - pipewire-ffado
-    - pipewire-jack-client
-    - pipewire-jack
-    - pipewire-pulse
-    - pipewire-roc
-    - gst-plugin-pipewire
-    - pipewire-zeroconf
-    - pipewire-v4l2
-    - pipewire-x11-bell
-    - pipewire-session-manager
-    - pulse-native-provider
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -35,55 +11,67 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:1.4.2-1
+    version: 1:1.4.4-1
     packages:
-      - pipewire-1:1.4.2-1-x86_64.pkg.tar.zst
-      - libpipewire-1:1.4.2-1-x86_64.pkg.tar.zst
-      - alsa-card-profiles-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-docs-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-libcamera-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-audio-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-alsa-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-ffado-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-jack-client-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-jack-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-pulse-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-roc-1:1.4.2-1-x86_64.pkg.tar.zst
-      - gst-plugin-pipewire-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-zeroconf-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-v4l2-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-x11-bell-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pipewire-session-manager-1:1.4.2-1-x86_64.pkg.tar.zst
-      - pulse-native-provider-1:1.4.2-1-x86_64.pkg.tar.zst
+      - pipewire-1:1.4.4-1-x86_64.pkg.tar.zst
+      - libpipewire-1:1.4.4-1-x86_64.pkg.tar.zst
+      - alsa-card-profiles-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-docs-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-libcamera-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-audio-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-alsa-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-ffado-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-jack-client-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-jack-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-pulse-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-roc-1:1.4.4-1-x86_64.pkg.tar.zst
+      - gst-plugin-pipewire-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-zeroconf-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-v4l2-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-x11-bell-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pipewire-session-manager-1:1.4.4-1-x86_64.pkg.tar.zst
+      - pulse-native-provider-1:1.4.4-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
